--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <div>
         <h3>Acesse sua conta</h3>
     </br>
+    <p>nome</p>
         <input type="text" id="name"/>
     </br>
+    <p>senha</p>
         <input type="number" id="senha"/>
     </div>
 </body>
