--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p>senha</p>
         <input type="number" id="senha"/>
     </div>
-    <button>Entrar</button>
+    <button onclick="entrar()">Entrar</button>
 </body>
 </html>
